xprofile. Manage same config for both Ubuntu and Arch Linux

--- a/homemaker.toml
+++ b/homemaker.toml
@@ -3,6 +3,7 @@
         [".vimrc"],
         [".zshrc"],
 	[".gitconfig"],
+	[".xprofile"],
 	[".local/bin/rofi_run"],
 	[".local/bin/skype_at_home"],
 	[".local/bin/skype_at_devpro"],
